# Vibrato-Notes-Desktop

./: .#TODO.org  .directory  .gitignore  .gitmodules  TODO.org  VibratoNotes-Desktop.pro  appconfig.cpp  appconfig.h  breeze-icons.qrc  compile.sh  devlog.org  dummy-content.txt  elementary-icons.qrc  gen_compile_commands.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build  note.cpp  notelistitem.cpp  notelistitem.h  notelistitem.ui  notelistmanager.cpp  notelistmanager.h  notes.cpp  notes.h  notes.ui  readme.md  resource.qrc  treeitem.cpp  treeitem.h  treemanager.cpp  treemanager.h  treemodel.cpp  treemodel.h  userwindow.h
dummy/: notebooks.json  notes.json  tags.json
include/: helper-io.hpp
resources/: dummy-data.qrc  fonts.qrc  icons.qrc  qdarkstyle.qrc  sqlfiles.qrc  styles.qrc  test.qrc  tutorial.qrc
src/: README.md  appinfo.h  crossplatformicon.cpp  crossplatformicon.h  dougsfuzzysearch.cpp  dougsfuzzysearch.h  helper-io.h  iconutils.cpp  iconutils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notelistitem.h  notelistmanager.cpp  notelistmanager.h  treemanager.cpp  treemanager.h  userwindow.cpp
tests/: VibratoNotes-Desktop-Tests.pro  main.cpp  unit-tests.cpp
ui/: edittags.cpp  edittags.h  edittags.ui  escribaaddons.ui  mainwindow.ui  note_editnotebook.cpp  note_editnotebook.h  note_editnotebook.ui  note_edittags.cpp  note_edittags.h  note_edittags.ui  notebook_editparent.cpp  notebook_editparent.h  notebook_editparent.ui  notelist_addons.ui  notelistitem.ui  tagitem.ui  trashitem.cpp  trashitem.h  trashitem.ui  userwindow.ui
(+109 files in other folders)
